feat: added form with input box and button to campaign.erb

--- a/app/views/campaign.erb
+++ b/app/views/campaign.erb
@@ -16,4 +16,9 @@
       </div>
     </li>
   </ul>
+  <form action="/invest">
+    How much do you want to invest?  £
+    <input type="text" name="investment amount" value="">
+    <input type="submit" value="Invest">
+  </form>
 </div>
