--- a/app/views/campaign.erb
+++ b/app/views/campaign.erb
@@ -1,25 +1,31 @@
-<title>Investment: <%= @campaign[0].name %></title>
+<title>Investment <%= @single_campaign[0].name %></title>
+<%= p "@Campaign is: #{@single_campaign}"%>
+<%= p "@Campaign[0].name is: #{@single_campaign[0].name}"%>
 
-<div class="container" id="campaign">
   <ul class="list-group" >
     <li style="margin-bottom:25px">
       <div class="media">
         <div class="media-left">
-          <img src="/images/<%= @campaign[0].image %>.jpeg" class="media-object">
+          <img src="/images/<%= @single_campaign[0].image %>.jpeg" class="media-object">
         </div>
       </div>
       <div class="media-body">
-        <h4 class="media-heading"><%= @campaign[0].name %></h4>
-        <h6 class="media-heading"><%= @campaign[0].country %></h6>
-        <h6 class="media-heading"><%= @campaign[0].sector %></h6>
-        <p id="Target Amount">Target Amount: £<%= @campaign[0].target_amount %></p>
+        <h4 class="media-heading"><%= @single_campaign[0].name %></h4>
+        <h6 class="media-heading"><%= @single_campaign[0].country %></h6>
+        <h6 class="media-heading"><%= @single_campaign[0].sector %></h6>
+        <p id="Target Amount">Target Amount: £<%= @single_campaign[0].target_amount %></p>
+      </div>
+      <div class="progress">
+        <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40"
+        aria-valuemin="0" aria-valuemax="100" style="width:<%= @single_campaign[0].percentage %>%">
+          <span class=""><%= @single_campaign[0].percentage %>% Funded</span>
+        </div>
       </div>
     </li>
   </ul>
   <form class="" form action="/invest" method="post">
     <h5>How much do you want to invest?  £
-    <input type="hidden" id="campaign_name" name="campaign_name" value="<%= @campaign[0].name %>">
+    <input type="hidden" id="campaign_name" name="campaign_name" value="<%= @single_campaign[0].name %>">
     <input type="text" name="amount" value="">
     <input type="submit" value="Invest"></h5>
   </form>
-</div>
