--- a/app/views/campaign_list.erb
+++ b/app/views/campaign_list.erb
@@ -1,8 +1,7 @@
 <title>Campaign List</title>
 
-<div class="container" id="campaign">
   <ul class="list-group" >
-    <% @campaigns.each do |campaign| %>
+    <% @all_campaigns.each do |campaign| %>
       <a href="/<%= campaign.name %>" style="text-decoration: none">
         <li style="margin-bottom:25px">
           <div class="media">
@@ -16,8 +15,13 @@
             <h6 class="media-heading"><%= campaign.sector %></h6>
             <p id="Target Amount">Target Amount: £<%= campaign.target_amount %></p>
           </div>
+          <div class="progress">
+            <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40"
+            aria-valuemin="0" aria-valuemax="100" style="width:<%= campaign.percentage %>%">
+              <span class=""><%= campaign.percentage %>% Funded</span>
+            </div>
+          </div>
         </li>
       </a>
     <% end %>
   </ul>
-</div>
