--- a/public/css/style.css
+++ b/public/css/style.css
@@ -16,7 +16,7 @@ body {
  text-align: left;
  width: 400px;
  height: 350px;
- padding: 10px
+ /* padding: 10px */
 }
 
 p {
@@ -25,6 +25,27 @@ p {
  color: #3679B1
 }
 
+progress {
+ text-align: center;
+ font-size: 12px;
+ color: #3679B1
+}
+
+.progress {
+    background:#ccc;
+    padding:10px 0;
+    width:100%;
+    text-align:center;
+    position:relative;
+}
+
 li {
  list-style-type: none;
+}
+
+@media only screen and (max-width: 600px) {
+  .container {
+    margin-top: 2px;
+    margin-bottom: 20px;
+  }
 }
