--- a/app/views/campaign.erb
+++ b/app/views/campaign.erb
@@ -7,11 +7,17 @@
           <img src="/images/<%= @single_campaign[0].image %>.jpeg" class="media-object">
         </div>
       </div>
+      <br>
       <div class="media-body">
-        <h4 class="media-heading"><%= @single_campaign[0].name %></h4>
-        <h6 class="media-heading"><%= @single_campaign[0].country %></h6>
-        <h6 class="media-heading"><%= @single_campaign[0].sector %></h6>
-        <p id="Target Amount">Target Amount: £<%= @single_campaign[0].target_amount %></p>
+        <h6 class="media-heading"><%= @single_campaign[0].name %></h6>
+        <br>
+        <div class="left_right_Container">
+          <h6 class="media-heading"><%= @single_campaign[0].country %></h6>
+          <h6 class="media-heading"><%= @single_campaign[0].sector %></h6>
+        </div>
+        <br>
+        <br>
+        <h5 class="media-heading">Target Amount: £<%= @single_campaign[0].target_amount %></h5>
       </div>
       <div class="progress">
         <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40"
@@ -22,8 +28,8 @@
     </li>
   </ul>
   <form class="" form action="/invest" method="post">
-    <h5>How much do you want to invest?  £
+    <h6>How much do you want to invest?<br><br>
     <input type="hidden" id="campaign_name" name="campaign_name" value="<%= @single_campaign[0].name %>">
     <input type="text" name="amount" value="">
-    <input type="submit" value="Invest"></h5>
+    <input type="submit" value="Invest"></h6>
   </form>
