--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6,17 +6,33 @@ body {
   margin-top: 10px
 }
 
+.left_right_Container h6:first-of-type {
+    float: left;
+    color: black
+}
+
+.left_right_Container h6:last-of-type {
+    float: right;
+    color: black
+}
+
 .container, h6 {
  text-align: left;
  color: black
 }
 
+.container, h5 {
+ text-align: center;
+ color: black
+}
+
 .container li {
- background: #D3D3D3;
+ /* background: #D3D3D3; */
+ background: #eaecef;
  text-align: left;
- width: 400px;
+ max-width: 400px;
  height: 350px;
- /* padding: 10px */
+ padding: 10px
 }
 
 p {
@@ -25,26 +41,33 @@ p {
  color: #3679B1
 }
 
-progress {
+/* .progress {
  text-align: center;
+ max-width: 400px;
  font-size: 12px;
  color: #3679B1
-}
+} */
 
-.progress {
+
+/* .progress {
     background:#ccc;
     padding:10px 0;
-    width:100%;
-    text-align:center;
+    max-width:500px; */
+    /* width:100%; */
+    /* text-align:center;
     position:relative;
-}
+} */
+
+
 
 li {
+ max-width: 400px;
  list-style-type: none;
 }
 
 @media only screen and (max-width: 600px) {
   .container {
+    max-width: 450px;
     margin-top: 2px;
     margin-bottom: 20px;
   }
