Fix: changed get '/:name' to '/campaign/:name' to enable redirect to '/confirmation' from '/invest'

--- a/app/views/campaign_list.erb
+++ b/app/views/campaign_list.erb
@@ -2,7 +2,7 @@
 
   <ul class="list-group" >
     <% @all_campaigns.each do |campaign| %>
-      <a href="/<%= campaign.name %>" style="text-decoration: none">
+      <a href="/campaign/<%= campaign.name %>" style="text-decoration: none">
         <li style="margin-bottom:25px">
           <div class="media">
             <div class="media-left">
