--- a/app/views/confirmation.erb
+++ b/app/views/confirmation.erb
@@ -3,7 +3,7 @@
   <ul class="list-group" >
         <div class="media-body">
           <h6 class="media-heading"></h6>
-          <h6 class="media-heading"><%= "Congratulations! you have successfully invested £#{session[:amount]} in #{session[:campaign_name]}" %></h6>
+          <h6 class="media-heading"><%= "Congratulations! you have successfully invested £#{@amount} in #{@campaign_name}" %></h6>
           <br>
           <a href="/" style="text-decoration: none">
             <h6 class="media-heading">Back to all campaigns</h6>
