refactor: 'Invest in Campaign_3' feat test, checks specific page element values

--- a/app/views/confirmation.erb
+++ b/app/views/confirmation.erb
@@ -3,10 +3,10 @@
   <ul class="list-group" >
         <div class="media-body">
           <h6 class="media-heading"></h6>
-          <h6 class="media-heading"><%= "Congratulations! you have successfully invested £#{@amount} in #{@campaign_name}" %></h6>
+          <h6 class="media-heading congratulations"><%= "Congratulations! you have successfully invested £#{@amount} in #{@campaign_name}" %></h6>
           <br>
           <a href="/" style="text-decoration: none">
-            <h6 class="media-heading">Back to all campaigns</h6>
+            <h6 class="media-heading back">Back to all campaigns</h6>
           </a>
         </div>
   </ul>
